--- a/application/templates/emp.html
+++ b/application/templates/emp.html
@@ -3,6 +3,7 @@
   <title></title>
 </head>
 <body>
+<p>{{user}}</p>
 <table>
     {% for employee in employees %}
 
@@ -33,5 +34,6 @@
 
     {% endfor %}
 </table>
+<a href={{url}}>logout</a>
 </body>
 </html>
