--- a/application/templates/emp.html
+++ b/application/templates/emp.html
@@ -1,9 +1,17 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+        "http://www.w3.org/TR/html4/loose.dtd">
+
+
+
 <html>
 <head>
+        <script type="text/javascript" src="../static/jquery.js"></script>
+    <link rel="stylesheet" type="text/css" href="../static/style.css">
   <title></title>
 </head>
 <body>
-<p>{{user}}</p>
+<p></p>
+
 <table>
     {% for employee in employees %}
 
