--- a/application/templates/as_form.html
+++ b/application/templates/as_form.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-
+"http://www.w3.org/TR/html4/loose.dtd">
 
 
 <html>
@@ -12,17 +11,20 @@
 
 
 <script type="text/javascript">
-    
+
+var form_key='';
+
 $(document).ready(function(){
 
+    $.post('/add_info', function(data){form_key = data})
+
     $('.add_button').click(function(){
-
+        
         but = $(this);
-
-        $.post('/add_info',{table: but.parent().attr('id')}, function(data){
+        $.post('/add_info', {table: but.parent().attr('id'), form_key: form_key}, function(data){
 
          $('<input type="text" size="75">').attr('id',data).focusout(function(){
-            
+
             $.post("/add_info", {value: this.value, key: this.id})
 
     }).insertBefore(but)
