--- a/application/templates/as_form.html
+++ b/application/templates/as_form.html
@@ -4,8 +4,8 @@
 
 <html>
 <head>
-    <script type="text/javascript" src="../static/jquery.js"></script>
-    <link rel="stylesheet" type="text/css" href="../static/style.css">
+    <script type="text/javascript" src="/static/jquery.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
     <title></title>
 </head>
 
@@ -46,11 +46,6 @@ $(document).ready(function(){
 <body>
 
 <a href="{{url}}">logout</a>
-<p id="period">Period: </p>
-<p id="employee">Employee: </p>
-<p id="manager">Manager: </p>
-
-
 
 <div id="prev_goals" class="input_div">
 
