--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -33,6 +33,7 @@
 </script>
 
 <body>
+<div id="wrapper">
 <div id="user">
     <p>{{user.first_name}} {{user.last_name}}</p>
     <p>{{user.e_mail}}</p>
@@ -50,6 +51,6 @@
 
 
 <a href="{{url}}">logout</a>
-
+</div>
 </body>
 </html>
