--- a/application/templates/users.html
+++ b/application/templates/users.html
@@ -19,6 +19,7 @@
                 <td>{{user.e_mail}}</td>
                 <td>{{user.manager.first_name}} {{user.manager.last_name}}</td>
                 <td>{{user.roles}}</td>
+                <td>{{user.dept.name}}</td>
             </tr>
         {% endfor %}
     </table>
