--- a/application/templates/as_form.html
+++ b/application/templates/as_form.html
@@ -112,7 +112,18 @@ $(document).ready(function(){
     <p>Conclusions:</p>
     
 </div>
+<div>
+    
+      <a href="/serve/{{file}}">file</a>
 
+</div>
+<div>
+    <form action="{{upload_url}}" method="POST" enctype="multipart/form-data">
+        <input type='hidden' name='key' value={{key}}>
+        <input type="file" name="file"><br>
+        <input type="submit" name="submit" value="add">
+    </form>
+</div>
 
 </body>
 </html>
