--- a/application/templates/new_user.html
+++ b/application/templates/new_user.html
@@ -68,7 +68,7 @@
                 <td><input type="text" name="e_mail"><br></td>
             </tr>
             <tr>
-                <td><label>dept:</label></td>
+                <td><label>department:</label></td>
                 <td><input type="text" name="dept"><br></td>
             </tr>
             <tr>
