--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <script type="text/javascript" src="/static/jquery.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/main.css">
 
     <!-- title -->
     {% block title %}
@@ -38,7 +38,7 @@
 </div>
 
 <!-- content -->
-<div id="content">
+<div id="body">
     {% block content %}
 
     {% endblock %}
@@ -46,7 +46,7 @@
 
 <!-- footer -->
 <div id="footer">
-    From Kharkov with Love
+    From Kharkov with Love (c) Mirantis
 </div>
 
 </body>
