--- a/application/templates/as_form.html
+++ b/application/templates/as_form.html
@@ -114,7 +114,7 @@ $(document).ready(function(){
 </div>
 <div>
     
-      <a href="/serve/{{file}}">file</a>
+      <a href="/serve/{{file_key}}">{{file_name}}</a>
 
 </div>
 <div>
