--- a/application/templates/as_form.html
+++ b/application/templates/as_form.html
@@ -61,6 +61,7 @@ $(document).ready(function(){
 <body>
 <p>Performance Review Form for {{emp.first_name}} {{emp.last_name}}</p>
 <p>author: {{author.first_name}} {{author.last_name}}</p>
+<p>date: {{date}}</p>
 
 <div id="prev_goals" class="input_div">
 <p>Previous Goals:</p>
@@ -124,6 +125,7 @@ $(document).ready(function(){
         <input type="submit" name="submit" value="add">
     </form>
 </div>
+<a href="{{url}}">logout</a>
 
 </body>
 </html>
