--- a/application/templates/manager.html
+++ b/application/templates/manager.html
@@ -14,6 +14,9 @@
     })
 </script>
 <table>
+    {% if not employees %}
+        there aren't reviews
+    {% endif %}
     {% for employee in employees %}
         <tr>
             <td>{{employee.first_name}} {{employee.last_name}}</td>
