--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -4,6 +4,9 @@
 <head>
     <script type="text/javascript" src="/static/jquery.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/main.css">
+    <!-- links and scripts -->
+    {% block links %}
+    {% endblock %}
 
     <!-- title -->
     {% block title %}
@@ -23,8 +26,14 @@
         <table>
             <tr>
                 <td>{{username}}</td>
-                <td>Current role: {{role}}</td>
-                <td><a href="/logout">Logout</a></td>
+                <td>Current role:
+                    <select>
+                        {% for role in roles %}
+                            <option onclick="load('{{role}}')">{{role}}</option>
+                        {% endfor %}
+                    </select>
+                </td>
+                <td><a href="{{logout_url}}">Logout</a></td>
             </tr>
         </table>
     {% endblock %}
