--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="/static/jquery.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/main.css">
     <!-- links and scripts -->
-    {% block links %}
+    {% block css %}
     {% endblock %}
 
     <!-- title -->
