--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,5 +1,10 @@
 {% extends "_base.html" %}
 
+<!-- links and scripts -->
+{% block css %}
+<link rel="stylesheet" type="text/css" href="/static/index.css">
+{% endblock %}
+
 {% block script %}
 <script type="text/javascript">
     function load(a){
