--- a/application/templates/manager.html
+++ b/application/templates/manager.html
@@ -15,7 +15,7 @@
 </script>
 <table>
     {% if not employees %}
-        there aren't reviews
+        No reviews currently available
     {% endif %}
     {% for employee in employees %}
         <tr>
