--- a/application/templates/as_form.html
+++ b/application/templates/as_form.html
@@ -102,7 +102,7 @@ $(document).ready(function(){
         <p>Challenges:</p>
 
     {% for challenge in challenges %}
-
+        <!-- todo: use css class instead of properties -->
         <input type="text" size="75" id="{{challenge.key}}" value="{{challenge.value}}" onblur="send_value(id, value)">
 
     {% endfor %}
