--- a/application/templates/as_form.html
+++ b/application/templates/as_form.html
@@ -1,15 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-"http://www.w3.org/TR/html4/loose.dtd">
+{% extends "_base.html" %}
 
-
-<html>
-<head>
-    <script type="text/javascript" src="/static/jquery.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
-    <title></title>
-</head>
-
-
+{% block script %}
 <script type="text/javascript">
 
 var form_key= '{{key}}';
@@ -22,7 +13,7 @@ function send_value(id, value) {
 $(document).ready(function() {
     /*
     if (form_type == 'main') {
-         I don't expect we render JavaScript
+         I don't expect we render JavaScript this way
         {# {% for goal in prev_goals %} #}
             $('#prev_goals').append('<select id="{{goal.key}}"></select>');
             $('#{{goal.key}}').append('<option value="1" class="grade">below expectations</option>');
@@ -33,12 +24,12 @@ $(document).ready(function() {
     }
     */
 
-    $('.grade').click(function(){
+    $('.grade').click(function() {
         var id = $(this).parent().attr('id');
         $.post('/pr/data/update/'+id, {'grade': this.value}, function(data){alert(data)})
     })
 
-    $('.add_button').click(function(){
+    $('.add_button').click(function() {
         var button = $(this);
         var table = button.parent().attr('id');
         $.post(
@@ -53,9 +44,9 @@ $(document).ready(function() {
     })
 })
 </script>
+{% endblock %}
 
-
-<body>
+{% block content %}
 <p>Performance Review Form for {{emp.first_name}} {{emp.last_name}}</p>
 <p>Manager: {{author.first_name}} {{author.last_name}}</p>
 <p>date: {{date}}</p>
@@ -130,7 +121,4 @@ $(document).ready(function() {
     </form>
 </div>
 
-<a href="{{url}}">logout</a>
-
-</body>
-</html>
+{% endblock %}
