--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <script type="text/javascript" src="/static/jquery.js"></script>
+    <script type="text/javascript" src="/static/site.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/main.css">
     <!-- links and scripts -->
     {% block css %}
@@ -12,14 +13,13 @@
     {% block title %}
         <title>Pragmatiq - Performance Review tool</title>
     {% endblock %}
+
+    <!-- script -->
+    {% block script %}
+
+    {% endblock %}
 </head>
 <body>
-
-<!-- script -->
-{% block script %}
-
-{% endblock %}
-
 <!-- header -->
 <div id="header">
     {% block header %}
@@ -29,7 +29,7 @@
                 <td>Current role:
                     <select>
                         {% for role in roles %}
-                            <option onclick="load('{{role}}')">{{role}}</option>
+                            <option onclick="load_role('{{role}}')">{{role}}</option>
                         {% endfor %}
                     </select>
                 </td>
