--- a/application/templates/manager.html
+++ b/application/templates/manager.html
@@ -5,14 +5,7 @@
     <title></title>
 </head>
 <body>
-<script type="text/javascript">
-    $(document).ready(function(){
-        $('.load').click(function(){
-            var url=this.title;
-            $('.result').load(url)
-        })
-    })
-</script>
+
 <table>
     {% if not employees %}
         No reviews currently available
@@ -22,9 +15,9 @@
             <td>{{employee.first_name}} {{employee.last_name}}</td>
             <td>
                 {% if employee.manager_form %}
-                    <input class="load" type="button" title="pr/get/{{employee.manager_form.key}}" value="mark">
+                    <input type="button" value="mark" onclick="load('pr/get/{{employee.manager_form.key}}')">
                 {% else %}
-                    <input type="button" title="/pr/add/{{employee.key}}" class="load" value="add">
+                    <input type="button" value="add" onclick="load('/pr/add/{{employee.key}}')">
                 {% endif %}
             </td>
 
@@ -32,7 +25,7 @@
                 {% if not employee.self_form.key %}
                     <p>none</p>
                 {% else %}
-                    <input type="button" title="/pr/get/{{employee.self_form.key}}" class="load" value="show">
+                    <input type="button" value="show" onclick="load('/pr/get/{{employee.self_form.key}}')">
                 {% endif %}
             </td>
         </tr>
