--- a/application/templates/api.manager.html
+++ b/application/templates/api.manager.html
@@ -1,11 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends "_api_base.html" %}
 
+{% block content %}
 <table>
     {% if not employees %}
         No reviews currently available
@@ -31,6 +26,4 @@
         </tr>
     {% endfor %}
 </table>
-
-</body>
-</html>
+{% endblock %}
