as_form renamed

--- a/application/templates/api.assessment_form.html
+++ b/application/templates/api.assessment_form.html
@@ -13,7 +13,7 @@ function send_value(id, value) {
 $(document).ready(function() {
     /*
     if (form_type == 'main') {
-         I don't expect we render JavaScript this way
+        // I don't expect we render JavaScript this way
         {# {% for goal in prev_goals %} #}
             $('#prev_goals').append('<select id="{{goal.key}}"></select>');
             $('#{{goal.key}}').append('<option value="1" class="grade">below expectations</option>');
