--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -27,9 +27,9 @@
             <tr>
                 <td>{{username}}</td>
                 <td>Current role:
-                    <select>
+                    <select onchange="load_role(this.options[selectedIndex].value);">
                         {% for role in roles %}
-                            <option onclick="load_role('{{role}}')">{{role}}</option>
+                            <option value="{{role}}">{{role}}</option>
                         {% endfor %}
                     </select>
                 </td>
