--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -33,7 +33,7 @@
                         {% endfor %}
                     </select>
                 </td>
-                <td><a href="{{logout_url}}">Logout</a></td>
+                <td><a href="/logout">Logout</a></td>
             </tr>
         </table>
     {% endblock %}
