--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -27,7 +27,9 @@
             <tr>
                 <td>{{username}}</td>
                 <td>Current role:
-                    <select onchange="load_role(this.options[selectedIndex].value);">
+                    <select onchange="load_role(
+                                this.options[selectedIndex].value,
+                                '{{user.key}}');">
                         {% for role in roles %}
                             <option value="{{role}}">{{role}}</option>
                         {% endfor %}
