--- a/application/templates/new_user.html
+++ b/application/templates/new_user.html
@@ -16,7 +16,7 @@
             var $form = $('#user_form'),
                 first_name = $form.find( 'input[name="first_name"]' ).val(),
                 last_name = $form.find( 'input[name="last_name"]' ).val(),
-                e_mail = $form.find( 'input[name="e_mail"]' ).val(),
+                email = $form.find( 'input[name="email"]' ).val(),
                 dept = $form.find( 'input[name="dept"]' ).val(),
                 manager = $form.find( 'select[name="manager"]' ).val(),
                 url = $form.attr( 'action' ),
@@ -28,7 +28,7 @@
                 $.post( url,
                         {first_name: first_name,
                         last_name: last_name,
-                        e_mail: e_mail,
+                        email: email,
                         role: role,
                         dept: dept,
                         manager: manager},
@@ -68,7 +68,7 @@
             </tr>
             <tr>
                 <td><label>e_mail:</label></td>
-                <td><input type="text" name="e_mail"><br></td>
+                <td><input type="text" name="email"><br></td>
             </tr>
             <tr>
                 <td><label>department:</label></td>
@@ -85,7 +85,7 @@
                 <td><select name="manager">
                         <option value="">None</option>
                     {% for manager in managers %}
-                        <option value="{{manager.key}}">{{manager.e_mail}}</option>
+                        <option value="{{manager.key}}">{{manager.email}}</option>
                     {% endfor %}
                     </select><br>
                 </td>
