--- a/application/templates/users.html
+++ b/application/templates/users.html
@@ -28,7 +28,7 @@
             <tr>
                 <td>{{user.first_name}}</td>
                 <td>{{user.last_name}}</td>
-                <td>{{user.e_mail}}</td>
+                <td>{{user.email}}</td>
                 <td>{{user.manager.first_name}} {{user.manager.last_name}}</td>
                 <td>{{user.roles}}</td>
                 <td>{{user.dept.name}}</td>
