--- a/application/templates/users.html
+++ b/application/templates/users.html
@@ -1,14 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-        <script type="text/javascript" src="/static/jquery.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
-    <title></title>
-</head>
+{% extends "_base.html" %}
 
-<body>
-<div id="wrapper">
+{% block content %}
+
 <div>
     <p>Users:</p>
     <table>
@@ -38,6 +31,5 @@
 
 </div>
 <a href="/new_user">Add user</a>
-</div>
-</body>
-</html>
+
+{% endblock %}
