--- a/application/templates/new_user.html
+++ b/application/templates/new_user.html
@@ -1,11 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-        <script type="text/javascript" src="/static/jquery.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
-    <title></title>
-</head>
+{% extends "_base.html" %}
+
+{% block script %}
+
 <script type="text/javascript">
 
 
@@ -52,7 +48,11 @@
 
     })
 </script>
-<body>
+{% endblock %}
+
+{% block content %}
+
+
 <div id="wrapper">
 <div>
     <p>add new:</p>
@@ -97,5 +97,5 @@
 
 </div>
 </div>
-</body>
-</html>
+
+{% endblock %}
