--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="/static/jquery.js"></script>
     <script type="text/javascript" src="/static/site.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/main.css">
+    <link type="text/css" href="/static/css/ui-lightness/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />
     <!-- links and scripts -->
     {% block css %}
     {% endblock %}
